update navbar dhe ndryshim css

--- a/holiday_reservation.html
+++ b/holiday_reservation.html
@@ -19,7 +19,7 @@
     <div class="banner">
         <nav class="navbar">
             <div class="items">
-                <a id="brand-logo" href="hero.html">dolan</a>
+                <a id="brand-logo" href="index.html">dolan</a>
                 <ul id="navItems">
                     <li><a href="hero.html#destinations">Destination</a></li>
                     <li><a href="hero.html#packages">Package</a></li>
