--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="banner">
         <nav class="navbar">
             <div class="items">
-                <a id="brand-logo" href="hero.html">dolan</a>
+                <a id="brand-logo" href="index.html">dolan</a>
                 <ul id="navItems">
                     <li><a href="#destinations">Destination</a></li>
                     <li><a href="#packages">Package</a></li>
